# cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.agents/instructions/: build-and-ci.md  coding-standards.md  index-maintenance.md  openspec.md
.agents/skills/: update-index.md
.github/workflows/: ci.yml
docs/: INDEX.md  README.md  checks.md  pr-taxonomy.md  testing-convention.md  testing-strategy.md
docs/architecture/: INDEX.md  README.md  test-strategy.md
docs/decisions/: 0001-python-typer.md  0002-canonical-docs-dir.md  0003-two-layer-checks.md  0004-byok-mcp.md  0005-madr-format.md  0006-openspec.md  0007-ac-id-and-test-type-convention.md  INDEX.md  README.md
docs/design/: INDEX.md  README.md
examples/eval-demo/: README.md  score-after-drift.txt  score-baseline.txt
examples/eval-demo/after-drift/: AGENTS.md
examples/eval-demo/baseline/: AGENTS.md
openspec/changes/2026-05-11-docs-index-scope/: proposal.md  tasks.md
openspec/changes/2026-05-11-empty-docs-dirs-exclusion/: proposal.md  tasks.md
openspec/changes/2026-05-25-eval-command/: design.md  proposal.md  tasks.md
openspec/changes/agent-facing-file-checks/: proposal.md  tasks.md
openspec/changes/architecture-file-checks/: design.md  proposal.md  tasks.md
openspec/changes/ase-init/: design.md  tasks.md
openspec/changes/change-005/: design.md  tasks.md
openspec/changes/check/: proposal.md  tasks.md
openspec/specs/adr-format/: spec.md
openspec/specs/adr-index/: spec.md
openspec/specs/agents-exists/: spec.md
openspec/specs/agents-hub-structure/: spec.md
openspec/specs/agents-links/: spec.md
openspec/specs/agents-size/: spec.md
openspec/specs/change-archived/: spec.md
openspec/specs/check-cli/: spec.md
openspec/specs/check-result-model/: spec.md
openspec/specs/checker-registry/: spec.md
openspec/specs/docs-index-exists/: spec.md
openspec/specs/docs-index-scope/: spec.md
openspec/specs/docs-index-stale/: spec.md
openspec/specs/docs-readme-exists/: spec.md
openspec/specs/eval-cli/: spec.md
openspec/specs/file-size/: spec.md
openspec/specs/scaffold-command/: spec.md
openspec/specs/secrets/: spec.md
openspec/specs/spec-ac-ids/: spec.md
src/ase_cli/: check.py  eval.py  init.py  main.py
src/iec_cli/: check.py  eval.py  init.py  main.py
tests/: ac-registry.md  scenario-template.md  test_adr_checkers.py  test_check.py  test_checkers.py  test_docs_checkers.py  test_eval.py  test_hub_secrets_checkers.py  test_lifecycle_checkers.py  test_main.py  test_size_checkers.py  test_spec_quality_checkers.py  test_traceability_checker.py
tests/integration/: test_check.py  test_checkers.py  test_eval.py  test_init.py
(+132 files in other folders)
