[project]
name = "ase-cli"
version = "0.0.1"
description = "ASE practice validation CLI — deterministic + AI-assisted checks for agentic software engineering repos"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "ASE Book Contributors" }
]
keywords = ["ase", "ai", "agent", "spec-driven", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "typer>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "ruff>=0.11",
]

[project.scripts]
ase = "ase_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ac: marks a test as proving a specific acceptance criterion",
    "baseline: marks coverage threshold or structural regression tests",
    "sanity: marks environment or toolchain readiness tests",
]
